[project]
name = "broadleaf"
version = "0.1.0"
description = "Structured JSONL logging — local-first, cloud-ready. A BroadLeaf grows where it's planted."
requires-python = ">=3.13"
dependencies = []

[project.optional-dependencies]
aws = ["boto3>=1.34"]
gcp = ["google-cloud-logging>=3.10"]
dev = ["pytest>=8", "freezegun>=1.4"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/broadleaf"]

[tool.uv]
package = true
